--- a/front/src/components/profile-form/ProfileForm.module.scss
+++ b/front/src/components/profile-form/ProfileForm.module.scss
@@ -23,7 +23,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  display: flex;;  
+  display: flex;
   flex-direction: column;
   justify-content: left;
   
@@ -42,7 +42,6 @@
 
 .profileForm_imageEdit {
   display: flex;
-  align-items: center;
   margin-bottom: 20px;
   flex-direction: column;
   margin-right: 1em;
